--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -44,6 +44,7 @@ p {
 
 button {
   width: min-content;
+  height: min-content;
   font-size: 16px;
   font-weight: 700;
   font-family: 'Roboto', sans-serif;
@@ -70,7 +71,7 @@ img {
   &__description {
     padding: 16px 0 24px;
   }
-  &__btn--open-popup {
+  &__btn-open-popup {
     padding: 16px 40px;
     background-color: $bg-btn;
     border-radius: 32px;
@@ -92,6 +93,9 @@ img {
   align-items: center;
   padding: 20px;
   background-color: $bg-popup;
+  &.active{
+    display: flex;
+  }
   &__content {
     width: 1100px;
     max-width: 100%;
@@ -99,13 +103,29 @@ img {
     background-color: $light;
     padding: 16px;
   }
-  &__alert--info {
+  &__alert-info {
+    display: flex;
+    align-items: center;
     padding: 16px 0 24px;
+  }
+  &__btn-reset{
+    padding: 4px 16px;
+    background-color: $grey;
+    border-radius: 8px;
+    color: $light;
+    margin-left: 8px;
+    display: none;
+    &:hover {
+      background-color: darken($grey, 5%);
+    }
+    &.active{
+      display: block;
+    }
   }
   &__number {
     font-weight: 700;
   }
-  &__btn--close-popup {
+  &__btn-close-popup {
     position: absolute;
     right: 20px;
     top: 20px;
@@ -145,15 +165,11 @@ img {
   }
 }
 
-.popup.active {
-  display: flex;
-}
-
 .loading {
   display: none;
   justify-content: center;
   &::after {
-    content: "";
+    content: '';
     width: 50px;
     height: 50px;
     border: 10px solid darken($light, 5%);
@@ -162,10 +178,9 @@ img {
     transform: rotate(0.16turn);
     animation: loading 1s linear infinite;
   }
-}
-
-.loading.active{
-  display: flex;
+  &.active{
+    display: flex;
+  }
 }
 
 @keyframes loading {
@@ -209,7 +224,7 @@ img {
       justify-content: center;
     }
   }
-  .popup{
+  .popup {
     &__content {
       padding: 40px;
     }
